# langrinder

./: .ruff.toml  LICENSE  README.md  pyproject.toml
docs/: compiling.rst  conf.py  index.md  index.rst
docs/en/: config.md  index.md  syntax.md
docs/ru/: config.md  index.md  syntax.md
examples/: __init__.py  bot.py  compile.py  main.py
examples/locales/: __init__.py  compiled.json  en.mako  i18n.py  ru.mako
examples/locales/en/: main.mako
examples/locales/ru/: main.mako
langrinder/: __init__.py  base.py  config.py  exc.py  impl.py  main.py  middlewares.py  node.py  nodes.py  parser.py  rules.py  types.py
langrinder/cli/: cli.py  formatter.py  main.py
langrinder/compiler/: __init__.py  abc.py  json_compiler.py
langrinder/generator/: __init__.py  base.py  base_node.mako  base_translation.mako  generator.py  result.py
langrinder/generator/templates/: node.mako
langrinder/integration/: nodes.py
langrinder/integration/pendulum/: __init__.py  tools.py  wrapper.py
langrinder/integration/telegrinder/: nodes.py
langrinder/integrations/: telegrinder.py
langrinder/integrations/telegrinder/: config.py  rules.py  sources.py  translator.py
langrinder/manager/: __init__.py  manager.py  mng.py
langrinder/parser/: __init__.py  abc.py  base.py  common.py  parser.py  syntax.py
langrinder/tools/: __init__.py  formatting.py  gender.py  html.py  imports.py  json.py  plural.py  pluralizer.py  time.py
