[project]
name = "langrinder"
version = "1.1.3"
description = "Engine for i18n with telegrinder integration based on mako!"
readme = "README.md"
requires-python = "<4.0,>=3.12"
authors = [
    {name = "tirch", email = "247108189-tirch@users.noreply.gitlab.com"}
]
dependencies = [
    "colorama>=0.4.6",
    "halo>=0.0.31",
    "mako>=1.3.10",
    "telegrinder",
    "toml>=0.10.2",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.12",
]

[tool.uv]
package = true

[tool.uv.sources]
telegrinder = { git = "https://github.com/timoniq/telegrinder", rev = "dev" }

[tool.setuptools.package-data]
"langrinder.generator" = ["*.mako"]

[tool.langrinder]
default_locale = "ru"
node = "langrinder.nodes.UserLanguageCode"
locales_path = "examples/locales"
output = "examples/locales/i18n.py"
translation_name = "Translation"
base_node_template = "langrinder/generator/base_node.mako"
base_translation_template = "langrinder/generator/base_translation.mako"

[project.scripts]
langrinder = "langrinder.cli.cli:cli"

[tool.ruff]
line-length = 79
target-version = "py312"
src = ["src"]

include = ["langrinder/**.py"]
exclude = ["example/locales/i18n.py"]

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "ARG",
    "ANN",
    "D",
    "EM101",
    "EM102",
    "PT001",
    "PT023",
    "SIM108",
    "RET505",
    "PLR0913",
    "SIM103",
    "ISC003",
    "SIM114", # identical by code != identical by meaning
    # awful things, never use.
    # It makes runtime work differently from typechecker
    "TC001",
    "TC002",
    "TC003",
    "TC006",
    "UP038", # only affects perfomance and brings nothing useful
    "F401",
    "RUF",
    "S702",
    "PLR2004"
]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
