[project]
name = "langrinder"
version = "3.2.1"
description = "Flexible internationalization engine based on Mako templates"
readme = "README.md"
requires-python = "<4.0,>=3.12"
authors = [
    {name = "ventuero", email = "amerfoe@gmail.com"}
]
dependencies = [
    "babel>=2.17.0",
    "mako>=1.3.10",
    "pytz>=2025.2",
    "ujson>=5.10.0",
]

[project.scripts]
langrinder = "langrinder.cli.main:app"
lgr = "langrinder.cli.main:app"

[project.optional-dependencies]
dev = [
    "loguru>=0.7.3",
    "ruff>=0.11.12",
]
telegrinder = [
    "telegrinder",
]
cli = [
    "typer>=0.16.0",
]

[tool.uv]
package = true

[tool.uv.sources]
telegrinder = { git = "https://github.com/timoniq/telegrinder", rev = "dev" }

[tool.setuptools.package-data]
"langrinder.templates" = ["*.mako"]
